test/pass/lambdas/lambda_multiexpr_no_expect.lly
var a = 10
var b = false

var v = (||
    if a == 10:
        b = true
    10 )

v()
